:recycle: Fix video cards for mobile on safari

--- a/src/travel/videolibrary.module.scss
+++ b/src/travel/videolibrary.module.scss
@@ -51,7 +51,7 @@
 	transition: linear 200ms;
 	cursor: pointer;
 	border-radius: 10px;
-	width: 200px;
+	max-width: 200px;
 
 	&:hover,
 	&:focus {
